--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@testing-library/user-event": "^13.5.0",
     "crypto-js": "^4.2.0",
     "khalti-checkout-web": "^2.2.0",
+    "otp-generator": "^4.0.1",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.59.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-otp-input": "^3.1.1",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.3",
     "react-router-dom": "^7.6.3",
